Development Portal (2014-09-09 shi)
==============================
Add "FIX SIZE" as last step in widget


Development Portal (2014-09-04 shi)
==============================
Firefox fix widget height
New widget options css fix
Added footer of explanations for widget
Fixed SAVi high visibility mode width
Fixed frameborder="0" for iframe


Publisher Portal (2014-08-28 shi)
==============================
Sector graphs height


Development Portal (2014-08-28 shi)
==============================
Style generator page
Delete unused template styles


Development Portal (2014-08-21 shi)
==============================
Widget system
SAVi documentation
Customisation documentation
Generator documentation
Translation documentation
Fixed paddings and widths for titles and activities list table
Updated README.md


Development Portal (2014-08-20 shi)
==============================
Savi tables fix for larger numbers
Fixed image brightness for map icon
Inspire colourtheme
Edit Mustard colourtheme
Fixed bottom margin in map page


Development Portal (2014-08-19 shi)
==============================
Original icons for themeing
Fixed images opacity filters
Fixed original.css
Fixed padding for donor/sector activities
Fixed padding for table titles
Fixed High Vis CSS bug
Fixed line-height in tables for better legibility
Fixed image brightness for SAVi


Development Portal (2014-08-18 shi)
==============================
Tint mode for themeing
Mustard colourtheme
Fixed original.css


Development Portal (2014-08-13 shi)
==============================
Fixed High Visibility slug link to registry dataset
Fixed {missing_data} to include description
Added translations


Publisher Portal (2014-08-13 shi)
==============================
Added descriptive header titles to include Country and Sector count


Publisher Portal (2014-08-12 shi)
==============================
Added views for country activities, transactions and budgets
Added translations
Fixed header titles for new views

