@@ -11,7 +11,7 @@
 
 #generator_crs_error
 <div class="reminder_wrap">
-Please select a single country and no publisher.
+Please select <b>ONE</b> recipient and <b>NO</b> publisher.
 </div>
 #generator
 <div id="generator" class="generator">
@@ -62,7 +62,6 @@ Please select a single country and no publisher.
 
 </form>
 </div>
-<a id="frame_fix_size">FIX SIZE</a>
 <div id="frame" class="frame"></div>
 {reminder}
 
@@ -73,7 +72,7 @@ Please select a single country and no publisher.
 <div class="instruct_col_wrap">
 	<div class="default"><div class="mid_wrap"></div><div class="mid_wrap"><div class="arrow"></div></div></div>
 	<div class="default">
-		<div class="instruct_col first">
+		<div class="instruct_col">
 			<div class="instruct_num">1</div>
 			<div class="instruct_text">Pick your data</div>
 			<div class="instruct_sub">Choose a Publisher's or a Recipient's data to display.</div>			
@@ -85,10 +84,6 @@ Please select a single country and no publisher.
 			<div class="instruct_num">3</div>
 			<div class="instruct_text">Pick a Skin</div>
 			<div class="instruct_sub">We have a few colour schemes available.</div>
-		</div><div class="instruct_col">
-			<div class="instruct_num">4</div>
-			<div class="instruct_text">FIX SIZE</div>
-			<div class="instruct_sub">Click <b>FIX SIZE</b> to resize the widget appropriately.</div>
 		</div>
 	</div>
 </div>
@@ -118,8 +113,7 @@ a#frame_fix_size:hover	{background-color:#2F84E5;}
 .instruct_head		{text-align:center; color:#fff; font-size:2em;}
 .instruct_info		{color:#fff; margin-top:15px;}
 .instruct_col_wrap	{width:100%; background-color:#222;}
-.instruct_col		{display:inline-block; vertical-align:top; width:200px; padding:40px 0 80px 53px;}
-.instruct_col.first	{padding-left:0;}
+.instruct_col		{display:inline-block; vertical-align:top; width:240px; padding:40px 40px 80px 40px;}
 .instruct_num		{text-align:center; color:#eee; font-size:6em; margin-bottom:10px;}
 .instruct_text		{text-align:center; color:#4CA0FF; font-size:1.4em;}
 .instruct_sub		{text-align:center; color:#ccc; font-size:1.0em; line-height:1.2em; margin-top:10px;}
