@@ -1,6 +1,8 @@
 Development Portal (2014-09-09 shi)
 ==============================
 Add "FIX SIZE" as last step in widget
+Omit "FIX SIZE" with new update
+Added more instructions to widget
 
 
 Development Portal (2014-09-04 shi)
